# blimp_co_rust

./: .gitignore  Cargo.toml  Makefile  README.md  event_map.json
deployment/: reservation-api.wrangler.toml  scheduling-api.wrangler.toml
domain/reservation/: Cargo.toml
domain/reservation/src/: lib.rs
domain/reservation/src/aggregate/: accommodation.rs  accommodation_id.rs  accommodation_name.rs  airfield.rs  airfield_id.rs  contact.rs  email_address.rs  flight.rs  flight_availability.rs  flight_id.rs  flight_route.rs  icao_code.rs  itinerary.rs  journey.rs  journey_id.rs  journey_name.rs  mod.rs  number_of_seats.rs  passengers.rs  person_full_name.rs  phone_number.rs  picture.rs  place.rs  place_name.rs  reservation.rs  reservation_id.rs  segment.rs
domain/reservation/src/command/: cancel_reservation.rs  confirm_reservation.rs  get_reservation.rs  make_flight_available.rs  mod.rs  (+5 more)
domain/scheduling/: Cargo.toml
domain/scheduling/src/: lib.rs
frontend/backoffice/: index.html  server.js
frontend/backoffice/css/: app.css
frontend/backoffice/js/: app.js  components.js
local/: environment.js  package.json  server.js
prelude/: Cargo.toml
prelude/src/: lib.rs
prelude/src/collection/: mod.rs  sorted_set.rs
prelude/src/data/: geohash.rs  mod.rs  money.rs  uid.rs
prelude/src/domain/: event.rs  mod.rs  transaction.rs  version.rs
prelude/src/encode/: base62.rs  mod.rs
prelude/src/parse/: mod.rs
prelude/src/runtime/: repository.rs
prelude_macros/: Cargo.toml
prelude_macros/src/: lib.rs
service/reservation_api/: Cargo.toml  wranger.toml
service/reservation_api/src/: lib.rs
service/reservation_api/src/api/: journey_api.rs  mod.rs  reservation_api.rs
service/reservation_api/src/api/security/: mod.rs
service/reservation_api/src/api/transfer_objects/: mod.rs
service/reservation_api/src/runtime/repository/: do_reservation.rs  mod.rs  r2_availability.rs  r2_journeys.rs
service/scheduling_api/: Cargo.toml  wranger.toml
service/scheduling_api/src/: lib.rs
service/scheduling_api/src/api/: airfield_api.rs  airship_api.rs  flight_api.rs  mod.rs
service/scheduling_api/src/api/transfer_objects/: mod.rs
service/scheduling_api/src/runtime/repository/: do_scheduling.rs  mod.rs  r2_dashboard.rs
(+58 files in other folders)
